2000-04-06  Radek Doulik  <rodo@helixcode.com>

	* BUGS: removed http://www.stjerneskolan.com as it looks nice now
	updated leaks item, added explanation of bug in ImageFactory

2000-04-05  Radek Doulik  <rodo@helixcode.com>

	* BUGS: updated * Sites that look wrong * http://www.stjerneskolan.com

2000-04-03  Jacob Berkman  <jacob@helixcode.com>

	* BUGS: add some bugs I've found but don't know how to fix

2000-03-27  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (EXTRA_DIST): Distribute `COPYING.LIB' too.

2000-03-27  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Require gnome-print 0.13 or later.

2000-03-27  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Define `GTKHTML_CURRENT', `GTKHTML_REVISION' and
	`GTKHTML_AGE'.  Of course, they are set to zero initially.

2000-03-27  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Print the actual version numbers when the
	installed gdk-pixbuf or gnome-print are too old.

2000-03-24  Ettore Perazzoli  <ettore@helixcode.com>

	* configure.in: Disable `libwww' usage if it is not built with
	zlib support.  Make sure the installed gnome-print is 0.13 or
	later.  Make sure the installed gdk-pixbuf is 0.6.0 or later.

2000-03-24  Radek Doulik  <rodo@helixcode.com>

	* BUGS: removed
	- http://www.helixcode.com is still incorrect (there is extra space on
	  the left, between the helix and the icons).

	as it is fixed now


2000-03-23  Radek Doulik  <rodo@ucw.cz>

	* BUGS,TODO: removed from BUGS (hope it is not premature) and
	added rewrite of HTMLClueFlow parts, as HTMLTextMaster,Slave
	are really evil hacks

2000-03-22  Ettore Perazzoli  <ettore@helixcode.com>

	* BUGS: New file.
	* Makefile.am: distribute it.

2000-03-16  Daniel Veillard <Daniel.Veillard@w3.org>

	* configure.in, Makefile.am, gtkhtml.spec.in: added a spec file
	  so that rpm -ta gtkhtml-xxx.tar.gz works

2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* Makefile.am (EXTRA_DIST): Add `gtkhtmlConf.sh.in'.
