@@ -21,6 +21,10 @@ AC_SUBST(CFLAGS)
 AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
+dnl GNU regex checking
+
+AC_CHECK_FUNC(re_compile_pattern, AC_DEFINE(HAVE_GNU_REGEX))
+
 dnl Libwww checks.
 
 AC_MSG_CHECKING([for libwww])
